ajustando CSS para teste evaluetor

--- a/style.css
+++ b/style.css
@@ -102,12 +102,6 @@ body {
   box-sizing: border-box;
 }
 
-.item:hover {
-  border: 2px solid grey;
-  cursor: pointer;
-  opacity: 0.5;
-}
-
 .item .item__sku {
   display: none;
 }
@@ -125,7 +119,7 @@ body {
 }
 
 .item .item__add {
-  background-color: #09342d;
+  background-color: rgb(5, 52, 219);
   border: 0;
   cursor: pointer;
   margin: 0;
