--- a/style.css
+++ b/style.css
@@ -9,6 +9,52 @@ body {
   background-color: rgb(246, 246, 246);
 }
 
+.search {
+  width: 300px;
+  margin-right: 50px;
+  height: 35px;
+  padding-left: 10px;
+  font-size: 20px;
+}
+
+.container-search {
+  display: flex;
+  align-items: center;
+}
+
+.container-search i {
+  color: white;
+  font-size: 30px;
+  margin-right: 7px;
+}
+
+.container-search i:hover {
+  color: grey;
+}
+
+.loading {
+  animation: is-rotating 1s infinite linear;
+  width: 50px;
+  height: 50px;
+  border: 6px solid gray;
+  border-top-color: green;
+  border-radius: 50%;
+}
+
+@keyframes is-rotating {
+
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+.price-product {
+  padding: 5px;
+  font-weight: 600;
+  text-align: center;
+  color: rgb(3, 52, 45);
+}
+
 .header {
   position: relative;
   background-color: rgb(3, 52, 45);
@@ -75,8 +121,9 @@ body {
 
 .container {
   display: flex;
-  justify-content: space-around;
   width: 100%;
+  background-color: rgb(241, 241, 238);
+  justify-content: flex-end;
 }
 
 .title strong {
@@ -89,6 +136,9 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   margin: 40px 0;
+  padding-left: 150px;
+  padding-right: 150px;
+  position: absolute;
 }
 
 .item {
@@ -100,6 +150,14 @@ body {
   border: 2px solid rgb(234, 234, 233);
   border-radius: 5px;
   box-sizing: border-box;
+  background-color: white;
+}
+
+.item:hover {
+  border: 4px solid grey;
+  transition: 500ms;
+  opacity: 0.5;
+  box-shadow: 10px 9px 5px -1px rgba(0, 0, 0, 0.37);
 }
 
 .item .item__sku {
@@ -119,7 +177,7 @@ body {
 }
 
 .item .item__add {
-  background-color: rgb(5, 52, 219);
+  background-color: rgb(40, 119, 80);
   border: 0;
   cursor: pointer;
   margin: 0;
@@ -128,22 +186,62 @@ body {
 }
 
 .cart {
-  display: flex;
-  flex-basis: 32%;
+  display: none;
+  flex-basis: 28%;
   flex-flow: column wrap;
-  background-color: rgb(241, 241, 238);
+  background-color: rgb(3, 52, 45);
   height: 100vh;
+  z-index: 1;
 }
 
 .cart .cart__items {
-  height: 500px;
+  height: 600px;
   overflow-y: scroll;
+}
+
+.selected {
+  display: flex;
+  align-items: center;
+}
+
+.selected:hover {
+  border-radius: 15px;
+  transition: 600ms;
+  background-color: rgb(40, 119, 80);
+  color: white;
+}
+
+.selected img {
+  border-radius: 50px;
+  margin: 8px;
+  height: 100%;
+}
+
+.cart__item {
+  margin-left: 20px;
+  line-height: 20px;
+  text-align: justify;
+  color: white;
+}
+
+.totalcart {
+  margin-bottom: 20px;
+  padding: 10px;
+  background-color: rgb(40, 119, 80);
+  color: white;
+  font-size: 20px;
+  font-weight: 550;
 }
 
 .empty-cart {
   width: 170px;
   height: 35px;
   margin: 0 auto;
-  border: 2px solid rgb(5, 52, 219);
+  border: 2px solid rgb(40, 119, 80);
   background-color: rgb(249, 249, 246);
+}
+
+.empty-cart:hover {
+  background-color: rgb(40, 119, 80);
+  transition: 500ms;
 }
